Add screen2 fragment

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,5 +5,6 @@
     <string name="namePrefix">Name: %s</string>
     <string name="emailPrefix">Email: %s</string>
     <string name="phonePrefix">Phone: %s</string>
+    <string name="albumHeader">Album: %s</string>
 
 </resources>
